ENG-5123: Fix styling for Universe resource numbers by increasing spacing between each metric and moving buttons to a new row when viewport size is small enough.
Summary:
Add margin between Universe resource numbers and add copy of buttons outside of flex
container that gets displayed when window size is less than 991px.

Test Plan:
Resize window on Create Universe page and check the resource numbers at the bottom of
page. Then try resizing window on Edit Universe page.

**Desktop view (Large)**
Original:
{F12195}

Change:
{F12196}

**Tablet view (Medium)**
Original:
{F12199}

Change:
{F12200}

**Mobile view (Small)** Notice the horizontal scrollbar
Original:
{F12203}

Change:
{F12204}

Reviewers: vit.pankin, ram

Reviewed By: ram

Subscribers: jenkins-bot, ui

Differential Revision: https://phabricator.dev.yugabyte.com/D6625

--- a/managed/ui/src/components/universes/UniverseForm/UniverseForm.scss
+++ b/managed/ui/src/components/universes/UniverseForm/UniverseForm.scss
@@ -221,6 +221,21 @@
   }
 }
 
+.mobile-view-btn-container {
+  display: none;
+  padding: 10px;
+
+  @media (max-width: 991px) {
+    display: block;
+  }
+}
+
+@media (max-width: 991px) {
+  .universe-resource-btn-container {
+    display: none;
+  }
+}
+
 .universe-form-submit-btn {
   margin-bottom: 10px !important;
 }
